--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
 <p>이달의 소녀, or LOONA (also stylized as LOOΠΔ) is a South-Korean girl group debuting August 7!!!!!! This debut has been highly anticipated since 2016 so please support :) calling all orbits to stream the mv when it comes out! let's show our girls some love <3</p>
 
-<h2>"favOriTe" debut single trailer</h2>
+                 <h2>favOriTe debut single trailer</h2>
+                 
 <p>here we see the first girl/goddess/legend do an iconic hair flip that looks amazing in slo-mo. but here:</p>
 
-<iframe width="420" src="https://youtube.com/embed/Imxuq01YKpE?autoplay=1"></iframe>
+<iframe width="420 height="315" src="https://youtube.com/embed/Imxuq01YKpE?autoplay=1"></iframe>
 
 <h3>Spotify playlist to their discography</h3>
 <iframe src="https://open.spotify.com/embed?uri=spotify:user:larssoerlie:playlist:5gghtdMeH53wDSkaAji7Bo" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
