--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <p>이달의 소녀, or LOONA (also stylized as LOOΠΔ) is a South-Korean girl group debuting August 7!!!!!! This debut has been highly anticipated since 2016 so please support :) calling all orbits to stream the mv when it comes out! let's show our girls some love &lt;3</p>
               
-<h2>favOriTe debut single trailer</h2>
+<h2>favOriTe debut mv</h2>
                  
 <p>here we see the first girl/goddess/legend do an iconic hair flip that looks amazing in slo-mo. but here:</p>
 
